# StockTracker

./: .gitignore  Cargo.toml  README.md  find_pin.sh
.github/workflows/: build.yml  build_old.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: AlertSetter.tsx  ConfirmButton.tsx  NavRail.tsx  PortfolioTabs.tsx
apps/desktop/src/lib/: tauri.ts  theme.ts  types.ts
apps/desktop/src/screens/: AnalysisScreen.tsx  ChartScreen.tsx  DashboardScreen.tsx  HoldingsScreen.tsx  SettingsScreen.tsx  WatchlistScreen.tsx
crates/application/: Cargo.toml
crates/application/src/use_cases/: compute_xirr.rs  dashboard_summary.rs  mod.rs  rebuild_holdings.rs  record_transaction.rs
crates/domain/: Cargo.toml
crates/domain/src/: entities.rs  errors.rs  lib.rs  repositories.rs  value_objects.rs
crates/domain/src/analytics/: market_phase.rs  mod.rs  portfolio_stats.rs  signal.rs  xirr.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/brokers/: mod.rs  zerodha.rs
crates/infrastructure/src/live_feed/: aggregator.rs  manager.rs  mod.rs  reconnect.rs  transport.rs
crates/infrastructure/src/market_data/: mod.rs  yahoo_finance.rs
crates/infrastructure/src/sqlite/: alert_rule_repository.rs  holding_repository.rs  instrument_repository.rs  mod.rs  portfolio_repository.rs  price_repository.rs  transaction_repository.rs
