[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "apps/desktop/src-tauri",
]

[workspace.dependencies]
rust_decimal = { version = "=1.26.1", default-features = false, features = ["std", "serde-str"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "=1.8.0", features = ["v4", "serde"] }
getrandom = "=0.2.15"
