[package]
name = "pm-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
pm-domain = { path = "../domain" }
rust_decimal = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
indexmap = "=2.2.6"
idna_adapter = "=1.1.0"

[dev-dependencies]
rust_decimal_macros = "1"

[dependencies.sha2]
version = "0.10"
